samples/_failures_safe/1761525944_b5f331_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5df1fe6.c: In function ‘main’:
./samples/SAFE/__tmp_b5df1fe6.c:148:25: error: missing terminating " character
  148 |         fprintf(stderr, "Failed to compress
      |                         ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b5df1fe6.c:148:9: error: expected expression at end of input
  148 |         fprintf(stderr, "Failed to compress
      |         ^~~~~~~
./samples/SAFE/__tmp_b5df1fe6.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b5df1fe6.c:148:9: error: expected declaration or statement at end of input
